--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^5.16.7",
+    "@stripe/stripe-js": "^4.4.0",
     "firebase": "^10.13.0",
-    "next": "14.2.6",
+    "next": "^14.2.7",
     "openai": "^4.56.0",
     "react": "^18",
     "react-dom": "^18",
